Implement List Command, add Servers Command and add Request & Buffer System

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,6 +1,7 @@
 enable: true
 overwrite-commands:
   kick: true
+  list: true
   transferserver: true
   msg: true
 command-config:
@@ -10,6 +11,11 @@ command-config:
     success-message: "§cSuccessfully kicked {player} for {reason}"
     usage: "§cUse /kick <Player> <Reason>"
     description: "kick a player from the network"
+  list:
+    permission: bungeetools.list
+    noperm-message: "§cYou are not allowed to use this command!"
+    usage: "§cUse /list <Server>"
+    description: "Get Server / Networks Players"
   msg:
     permission: bungeetools.msg
     noperm-message: "§cYou are not allowed to use this command!"
